[gd_scene load_steps=9 format=3 uid="uid://dyqovdfbx4laq"]

[ext_resource type="Script" uid="uid://dq0jo0766a6a1" path="res://controls/hud.gd" id="1_0cv51"]
[ext_resource type="Texture2D" uid="uid://c6ytbvaibnprl" path="res://controls/phone.png" id="2_lo8gu"]
[ext_resource type="PackedScene" uid="uid://xvxta0pjovmh" path="res://controls/statsbar.tscn" id="3_tlsrb"]
[ext_resource type="PackedScene" uid="uid://csxs58i34oxxv" path="res://controls/messages.tscn" id="4_jp2ct"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e7sel"]
texture = ExtResource("2_lo8gu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_psv2s"]
texture = ExtResource("2_lo8gu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vsxvn"]
texture = ExtResource("2_lo8gu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6x352"]
texture = ExtResource("2_lo8gu")

[node name="HUD" type="Node2D"]
script = ExtResource("1_0cv51")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="phone" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -158.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_e7sel")
theme_override_styles/hover = SubResource("StyleBoxTexture_psv2s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vsxvn")
theme_override_styles/normal = SubResource("StyleBoxTexture_6x352")

[node name="stats" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 2.0
offset_top = 508.0
offset_right = 116.0
offset_bottom = 539.0
alignment = 1

[node name="bar1" parent="CanvasLayer/stats" instance=ExtResource("3_tlsrb")]
layout_mode = 2
size_flags_vertical = 3

[node name="bar2" parent="CanvasLayer/stats" instance=ExtResource("3_tlsrb")]
layout_mode = 2
size_flags_vertical = 3

[node name="messages" parent="CanvasLayer" instance=ExtResource("4_jp2ct")]
visible = false

[connection signal="pressed" from="CanvasLayer/phone" to="." method="_on_phone_pressed"]
